# DetectAndTrackObject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  a.out  calibrateCameras  cmake_install.cmake  compileCommand  rtspTest.cpp
DetectBall/: a.out  detectBall.cpp
RedEyeRemover/: a.out
TestImageProcessor/: a.out  testImageProcessor.cpp
arduino/serialStringRead/: serialStringRead.ino
calibration/: a.out  calibrateCamera.cpp  calibrateCameras  calibrationCommand  stereiCalibrateCamera.cpp  stereoCalibrateCameras.cpp  stereoSaveVideo.cpp  takeBackgroundImages.cpp
calibration/cam1/: calibResults
calibration/cameraSetup1/: a.out  calibrateCamera.cpp  saveImages.cpp  takeBackgroundImages.cpp
calibration/cameraSetup1/cam1/: calibResults
calibration/cameraSetup1/cam2/: calibResults
calibration/cameraSetup2/cam1/: calibResults
calibration/cameraSetup2/cam2/: calibResults
calibration/cameraSetup2/stereo/: StereoCameraProperties
detection/: Detector.cpp  ThresholdDetector.cpp
include/: ActionEndEffector.h  Calibration.h  Camera.h  Detector.h  Motor.h  StereoCamera.h  Tracker.h
main/: runner.cpp
rtspTesting/: a.out  calibrateCameras.cpp  getRtspFeed.cpp  test  test.cpp
scratch/: a.out  serialTest.cpp
src/actionEndEffector/: ActionEndEffector.cpp  ArduinoFire.cpp
src/calibration/: Calibration.cpp  a.out  calibrateCamera.cpp  calibration.cpp  stereoCalibrateCameras.cpp
src/calibration/cam2/: calibResults
src/calibration/cameraSetup1/: calibrateCamera.cpp  compileFlags  stereoCalibrateCameras  stereoCalibrateCameras.cpp  stereoCreateVideo  stereoSaveVideo.cpp
src/calibration/cameraSetup1/stereo/: StereoCameraProperties  StereoCameraProperties_BACKUP_2
src/camera/: Camera.cpp  IpCamera.cpp  SingleImage.cpp  VideoFromFile.cpp  camera.cpp  ipCamera.cpp
src/detection/: BackgroundSubtractionDetector.cpp  Detector.cpp  ThresholdDetector.cpp
src/main/: detectionTest.cpp  runner.cpp
src/motor/: AngleCalculator.cpp  Motor.cpp  ServoMotor.cpp
src/stereoCamera/: StereoCamera.cpp  StereoCameraWithBackground.cpp
src/tracking/: KalmanTracker.cpp  Tracker.cpp
test/: a.out  colourBarChecker.cpp
